--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/!customer-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/!customer-list.tpl.html
@@ -25,7 +25,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="table-item" ng-repeat="data in objects" ng-class="{'selected': data.id === selectedNodeId}" context-menu data-target="col_menu_{{data.id}}" ng-click='selectNode(data)'>
+                        <tr class="table-item" ng-repeat="data in objects track by data.id" ng-class="{'selected': data.id === selectedNodeId}" context-menu data-target="col_menu_{{data.id}}" ng-click='selectNode(data)'>
                             <!--<td class="table-col">
                                 <label class="form-control __checkbox">
                                     <input type="checkbox" ng-model="data.selected">
