-ADD order. placeholder to cancel operation

--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/dialogs/cancelOperation-dialog.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/dialogs/cancelOperation-dialog.tpl.html
@@ -4,7 +4,7 @@
 <div class="modal-body">
     <p>    Are you sure want to cancel the document?</p>
     <div class="form-input">
-        <textarea ng-model="cancelReason"></textarea>
+        <textarea placeholder="Please enter cancel reason here..." ng-model="cancelReason"></textarea>
 </div>
 </div>
 <div class="modal-footer">
