--- a/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/blades/item/item-pricelists-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/blades/item/item-pricelists-list.tpl.html
@@ -2,7 +2,7 @@
 	<div class="blade-inner">
 		<div class="inner-block">
 			<ul class="list __items" ng-if="blade.currentEntities.length">
-                <li class="list-item" ng-click="openBlade(data)" ng-repeat="data in blade.currentEntities" ng-class="{'__selected': data.id === selectedItem.id}">
+                <li class="list-item" ng-click="openBlade(data)" ng-repeat="data in blade.currentEntities track by data.id" ng-class="{'__selected': data.id === selectedItem.id}">
                     <!--<i class="list-ico fa fa-wrench"></i>-->
                     <span class="list-t">
                         {{data.name}}
