--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/customerOrder-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/customerOrder-detail.tpl.html
@@ -37,7 +37,7 @@
                     <div class="form-group">
                         <label class="form-label">from</label>
                         <div class="form-input">
-                            <div class="form-text" am-time-ago="blade.currentEntity.createdDate"></div>
+                            <div class="form-text">{{blade.currentEntity.createdDate | date:'short'}}</div>
                         </div>
                     </div>
                     <div class="form-group">
