--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.MenuModule.Web/Scripts/blades/menu-link-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.MenuModule.Web/Scripts/blades/menu-link-list.tpl.html
@@ -1,4 +1,4 @@
-﻿<div class="blade-content __medium-wide">
+﻿<div class="blade-content __large-wide">
 	<div class="blade-inner">
 		<div class="inner-block">
 			<form class="form">
@@ -13,20 +13,44 @@
 				<table class="table">
 					<thead>
 						<tr>
-							<th class="table-col">Link Name</th>
+							<th class="table-col">IsActive</th>
+							<th class="table-col">Link Title</th>
 							<th class="table-col">Links to...</th>
+							<th class="table-col">Type</th>
+							<th class="table-col">Priority</th>
+							<th class="table-col">Language</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr class="table-item" ng-repeat="data in blade.currentEntity.menuLinks" ng-class="{'__selected': data.id === selectedItem.id}" context-menu data-target="ipl_menu_{{data.id}}" ng-click='selectItem(data)'>
+						<tr class="table-item" ng-repeat="data in blade.currentEntity.menuLinks" ng-class="{'__selected': _.lastIndexOf(blade.selectedItemIds, data.id) >= 0}" context-menu data-target="ipl_menu_{{data.id}}" ng-click='blade.selectItem(data.id)'>
+							<td class="table-col">
+								<div class="form-input">
+									<input type="checkbox" ng-model="data.isActive" required>
+								</div>
+							</td>
 							<td class="table-col">
 								<div data-step="any" class="form-input">
-									<input type="text" ng-model="data.name" required>
+									<input type="text" ng-model="data.title" required>
 								</div>
 							</td>
 							<td class="table-col">
 								<div class="form-input">
-									<input type="text" ng-model="data.link" required>
+									<input type="text" ng-model="data.url" required>
+								</div>
+							</td>
+							<td class="table-col">
+								<div class="form-input">
+									<input type="text" ng-model="data.type" required>
+								</div>
+							</td>
+							<td class="table-col">
+								<div class="form-input">
+									<input type="text" ng-model="data.priority" required>
+								</div>
+							</td>
+							<td class="table-col">
+								<div class="form-input">
+									<input type="text" ng-model="data.language" required>
 								</div>
 							</td>
 							<td class="table-col">
