--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.ThemeModule.Web/Scripts/blades/edit-asset.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.ThemeModule.Web/Scripts/blades/edit-asset.tpl.html
@@ -5,7 +5,7 @@
 				<div class="form-group">
 					<label class="form-label">Name:</label>
 					<div class="form-input">
-						<input focus-on="" ng-disabled="!blade.newAsset" required class="form-control" ng-model="blade.currentEntity.id" placeholder="Enter asset name" />
+						<input focus-on="" ng-disabled="!blade.newAsset" required class="form-control" ng-model="blade.currentEntity.name" placeholder="Enter asset name" />
 					</div>
 				</div>
 				<div class="form-group">
