--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.MenuModule.Web/Scripts/blades/link-lists.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.MenuModule.Web/Scripts/blades/link-lists.tpl.html
@@ -1,39 +1,48 @@
 ﻿<div class="blade-content">
 	<div class="blade-inner">
 		<div class="inner-block">
-			<ul class="list __items" ng-if="blade.currentEntities.length">
-				<li class="list-item" ng-click="blade.openBlade(data)" ng-repeat="data in blade.currentEntities | orderBy:name:reverse" ng-class="{'__selected': data.id === selectedNodeId}">
-					<span class="list-name">
-						{{data.name}}
-					</span>
-				</li>
-			</ul>
+			<div class="table-wrapper" ng-if="blade.currentEntities.length">
+				<table class="table">
+					<thead>
+						<tr>
+							<th class="table-col">Name</th>
+							<th class="table-col">Language</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr class="table-item" ng-repeat="data in blade.currentEntities" ng-click='blade.openBlade(data)'>
+							<td class="table-col">
+								<span>
+									{{data.name}}
+								</span>
+							</td>
+							<td class="table-col">
+								<span>
+									{{data.language}}
+								</span>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 			<p class="text" ng-if="!blade.currentEntities.length">No Link Lists Yet</p>
 		</div>
 	</div>
 </div>
 
-<!--<div class="blade-content __medium-wide">
-	<div class="blade-inner">
-		<div class="inner-block">
-			<div class="table-wrapper">
-				<table class="table">
-					<thead>
-						<tr>
-							<th class="table-col" ng-repeat="column in columns | orderBy:name:reverse" ng-click="setOrder(column)" ng-class="(column.checked) ? '__sorted' : ''">
-								{{column.title}}
-								<i ng-class="column.checked ? (column.reverse ?'sort-up':'sort-down') : ''" class="table-ico fa"></i>
-							</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr class="table-item" ng-class="{' __error': notification.notifyType == 'error', ' __warning': notification.notifyType == 'warning', ' __info': notification.notifyType == 'info'}" ng-click="notification.action(notification)" ng-repeat="notification in notifications" ng-include="notification.template"></tr>
-					</tbody>
-				</table>
-			</div>
-			<div class="pagination">
-				<pagination boundary-links="true" max-size="pageSettings.numPages" items-per-page="pageSettings.itemsPerPageCount" total-items="pageSettings.totalItems" ng-model="pageSettings.currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination>
-			</div>
-		</div>
-	</div>
-</div>-->
+<!--<td class="table-col">
+	<ul class="menu __context" role="menu" id="ipl_menu_{{data.id}}">
+		<li class="menu-item" ng-click='deleteLink(data)'>
+			<i class="menu-ico fa fa-trash-o"></i> Delete
+		</li>
+	</ul>
+</td>-->
+
+
+<!--<ul class="list __items" ng-if="blade.currentEntities.length">
+				<li class="list-item" ng-click="blade.openBlade(data)" ng-repeat="data in blade.currentEntities | orderBy:name:reverse" ng-class="{'__selected': data.id === selectedNodeId}">
+					<span class="list-name">
+						{{data.name}}
+					</span>
+				</li>
+			</ul>-->
