--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-valueType.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-valueType.tpl.html
@@ -20,6 +20,12 @@
                     <span class="list-t">Number</span>
                     <span class="list-descr">Digital input with float point.</span>
                 </label>
+                <label class="list-item" ng-mouseup="selectOption('DateTime')">
+                    <input type="checkbox" ng-checked="'DateTime' ===  blade.property.valueType">
+                    <span class="switch"></span>
+                    <span class="list-t">Date time</span>
+                    <span class="list-descr">Select date.</span>
+                </label>
             </ul>
         </div>
     </div>
