--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/advanced-search-results.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/advanced-search-results.tpl.html
@@ -1,61 +1,68 @@
-﻿<style>
-    .fixed-td {
-        width: 15px;
-    }
-</style>
-<table class="table hovered">
-    <thead>
-        <tr>
-            <td colspan="5">
-                <label style="text-align: right;">Count: {{pageSettings.totalItems}}</label>
-            </td>
-        </tr>
-        <tr>
-            <th class="text-left fixed-td"><input type="checkbox" ng-model="selectedAll" ng-change="checkAll(selectedAll)" /></th>
-            <th class="text-left fixed-td">Type</th>
-            <th class="text-left fixed-td">Image</th>
-            <th class="text-left">Name</th>
-            <th class="text-left fixed-td">Code</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="data in items" ng-class="{'active': data.id === selecteddata.id}" context-menu data-target="asr_menu_{{data.id}}">
-            <td>
-                <div data-role="input-control" class="input-control checkbox">
-                    <label>
-                        <input type="checkbox" ng-model="data.selected">
-                        <span class="check"></span>
-                    </label>
-                </div>
-            </td>
-            <td ng-click='selectItem(data)' ng-attr-title="{{data.type}}">
-                <i ng-class="{'icon-folder-2': data.type==='category', 'icon-basket': data.type==='product', 'icon-barcode': data.type==='variation'}" style="font-size:28px" />
-            </td>
-            <td ng-click='selectItem(data)'>
-                <img ng-src="{{data.imageUrl}}" height="42" width="42" ng-if="data.type!=='category' && data.imageUrl" /><i class="icon-none" ng-if="data.type!=='category' && !data.imageUrl" style="font-size:26px" />
-            </td>
-            <td ng-click='selectItem(data)' style="max-width: 150px; overflow: hidden;text-overflow: ellipsis;">
-                <span title="{{data.name}}">{{data.name}}</span>
-                <ul role="menu" class="dropdown-menu context-menu" id="asr_menu_{{data.id}}">
-                    <li ng-click='edit(data)'>
-                        <i class="ico fa fa-edit"></i> Manage
-                    </li>
-                    <li ng-click='delete()'>
-                        <i class="ico fa fa-trash-o"></i> Delete
-                    </li>
-                </ul>
-            </td>
-            <td ng-click='selectItem(data)'>
-                <span title="{{data.code}}">{{data.code}}</span>
-            </td>
-        </tr>
-    </tbody>
-    <tfoot>
-        <tr>
-            <td colspan="5" ng-include="'pagerTemplate.html'"></td>
-        </tr>
-    </tfoot>
-</table>
-<script type="text/ng-template" id="pagerTemplate.html">
-    <pagination ng-if="pageSettings.itemsPerPageCount < pageSettings.totalItems" boundary-links="true" max-size="pageSettings.numPages" items-per-page="pageSettings.itemsPerPageCount" total-items="pageSettings.totalItems" ng-model="pageSettings.currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination>
-</script>
+﻿<div class="blade-content __medium-wide">
+    <div class="blade-inner">
+        <div class="inner-block">
+            <div class="table-wrapper">
+                <table class="table">
+                    <thead>
+                        <tr class="table-item">
+                            <td class="table-col" colspan="5">
+                                <label>Count: {{pageSettings.totalItems}}</label>
+                            </td>
+                        </tr>
+                        <tr class="table-item">
+                            <th class="table-col __product-control">
+                                <label class="form-control __checkbox">
+                                    <input type="checkbox" ng-model="selectedAll" ng-change="checkAll(selectedAll)">
+                                    <span class="check"></span>
+                                </label>
+                            </th>
+                            <th class="table-col">Type</th>
+                            <th class="table-col">Image</th>
+                            <th class="table-col">Name</th>
+                            <th class="table-col">Code</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="table-item" ng-repeat="data in items" ng-class="{'active': data.id === selecteddata.id}" context-menu data-target="asr_menu_{{data.id}}">
+                            <td class="table-col __product-control">
+                                <label class="form-control __checkbox">
+                                    <input type="checkbox" ng-model="data.selected">
+                                    <span class="check"></span>
+                                </label>
+                            </td>
+                            <td class="table-col" ng-click='selectItem(data)' ng-attr-title="{{data.type}}">
+                                <div class="product-img">
+                                    <i class="table-ico fa" ng-class="data.type == 'category' ? ' fa-folder' : ' fa-image'" ng-if="!data.imageUrl"></i>
+                                </div>
+                                <!-- <i ng-class="{'icon-folder-2': data.type==='category', 'icon-basket': data.type==='product', 'icon-barcode': data.type==='variation'}" style="font-size:28px" /> -->
+                            </td>
+                            <td class="table-col" ng-click='selectItem(data)'>
+                                <div class="product-img">
+                                    <div class="image" style="background-image: url({{data.imageUrl}})" ng-if="data.type!=='category' && data.imageUrl"></div>
+                                </div>
+                            </td>
+                            <td class="table-col" ng-click='selectItem(data)' style="max-width: 150px; overflow: hidden;text-overflow: ellipsis;">
+                                <span title="{{data.name}}">{{data.name}}</span>
+                                <ul class="menu __context" id="asr_menu_{{data.id}}">
+                                    <li class="menu-item" ng-click='edit(data)'>
+                                        <i class="menu-item ico fa fa-edit"></i> Manage
+                                    </li>
+                                    <li class="menu-item" ng-click='delete()'>
+                                        <i class="menu-item ico fa fa-trash-o"></i> Delete
+                                    </li>
+                                </ul>
+                            </td>
+                            <td class="table-col" ng-click='selectItem(data)'>
+                                <span title="{{data.code}}">{{data.code}}</span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="pagination" ng-include="'pagerTemplate.html'"></div>
+            <script type="text/ng-template" id="pagerTemplate.html">
+                <pagination ng-if="pageSettings.itemsPerPageCount < pageSettings.totalItems" boundary-links="true" max-size="pageSettings.numPages" items-per-page="pageSettings.itemsPerPageCount" total-items="pageSettings.totalItems" ng-model="pageSettings.currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination>
+            </script>
+        </div>
+    </div>
+</div>
