--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/editorialReview-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/editorialReview-detail.tpl.html
@@ -8,13 +8,27 @@
                 <div class="form-group">
                     <label class="form-label">Type</label>
                     <div class="form-input">
-                        <select ng-model="currentEntity.reviewType" ng-options="x for x in types"></select>
+                        <!-- <select ng-model="currentEntity.reviewType" ng-options="x for x in types"></select> -->
+
+                        <ui-select ng-model="currentEntity.reviewType" ng-disabled="disabled">
+                            <ui-select-match placeholder="Select type">{{$select.selected.value}}</ui-select-match>
+                            <ui-select-choices repeat="x in types | filter: {value: $select.search}">
+                                <span ng-bind-html="x.value | highlight: $select.search"></span>
+                            </ui-select-choices>
+                        </ui-select>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="form-label">Language</label>
                     <div class="form-input">
-                        <select ng-model="currentEntity.languageCode" ng-options="lang.languageCode as lang.displayName for lang in blade.languages" required></select>
+                        <!-- <select ng-model="currentEntity.languageCode" ng-options="lang.languageCode as lang.displayName for lang in blade.languages" required></select> -->
+                        
+                        <ui-select ng-model="currentEntity.languageCode" ng-disabled="disabled">
+                            <ui-select-match placeholder="Select language">{{$select.selected.displayName}}</ui-select-match>
+                            <ui-select-choices repeat="lang in blade.languages | filter: {displayName: $select.search}">
+                                <span ng-bind-html="lang.displayName | highlight: $select.search"></span>
+                            </ui-select-choices>
+                        </ui-select>
                     </div>
                 </div>
                 <div class="form-group">
