--- a/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.MenuModule.Web/Scripts/blades/menu-link-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/CMS/VirtoCommerce.MenuModule.Web/Scripts/blades/menu-link-list.tpl.html
@@ -18,6 +18,7 @@
 								<ui-select ng-model="blade.currentEntity.language">
 									<ui-select-match placeholder="Select...">{{$select.selected}}</ui-select-match>
 									<ui-select-choices repeat="x in blade.languages">
+										<span class="flag flag-{{blade.getFlag(x)}}"></span>
 										<span ng-bind-html="x"></span>
 									</ui-select-choices>
 								</ui-select>
@@ -26,7 +27,7 @@
 					</div>
 				</div>
 			</form>
-			<div class="table-wrapper">
+			<div class="table-wrapper" ng-show="blade.currentEntity.menuLinks.length > 0">
 				<table class="table">
 					<thead>
 						<tr>
@@ -35,7 +36,7 @@
 							<th class="table-col">Links to...</th>
 						</tr>
 					</thead>
-					<tbody>
+					<tbody ui-sortable="sortableOptions" ng-model="blade.currentEntity.menuLinks">
 						<tr class="table-item" ng-repeat="data in blade.currentEntity.menuLinks" ng-class="{'__selected': _.lastIndexOf(blade.selectedItemIds, data.id) >= 0}" context-menu data-target="ipl_menu_{{data.id}}" ng-click='blade.selectItem(data.id)'>
 							<td class="table-col">
 								<div class="form-input">
