FIX|Add new property and Visible progress bar is create product

--- a/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-valueType.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/app/catalog/blades/property-valueType.tpl.html
@@ -26,6 +26,12 @@
                     <span class="list-t">Date time</span>
                     <span class="list-descr">Select date.</span>
                 </label>
+                <label class="list-item" ng-mouseup="selectOption('Boolean')">
+                    <input type="checkbox" ng-checked="'Boolean' ===  blade.property.valueType">
+                    <span class="switch"></span>
+                    <span class="list-t">Boolean</span>
+                    <span class="list-descr">Switch type.</span>
+                </label>
             </ul>
         </div>
     </div>
