Add blade status error in blade

--- a/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Scripts/common/navigation/blade/bladeContainer.tpl.html
+++ b/src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Scripts/common/navigation/blade/bladeContainer.tpl.html
@@ -2,7 +2,7 @@
     <div class="blade-wrapper" va-blade='blade'>
         <header class="blade-head">
             <div class="blade-status" ng-class="{'__error': blade.error}">
-                <div class="blade-status-bar" ng-if="blade.error">{{blade.error}}</div>
+                <div class="status-message" ng-if="blade.error">{{blade.error}}</div>
                 <div class="progress-bar" ng-class="{'__loaded': !blade.isLoading}" ng-show="blade.isLoading"></div>
             </div>
             <div class="blade-nav">
