-FIX Customer organization select. and search bugs.

--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/customer-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/customer-detail.tpl.html
@@ -20,8 +20,8 @@
                 <div class="form-input">
                     <label class="form-label">Organization(s)</label>
                     <ui-select multiple ng-model="blade.currentEntity.organizations">
-                        <ui-select-match placeholder="Select organization(s)">{{$select.selected.name}}</ui-select-match>
-                        <ui-select-choices repeat="x in organizations | filter: {name: $select.search}">
+                        <ui-select-match placeholder="Select organization(s)">{{$item.name}}</ui-select-match>
+                        <ui-select-choices repeat="x.id as x in organizations | filter: {name: $select.search}">
                             <span ng-bind-html="x.name | highlight: $select.search"></span>
                         </ui-select-choices>
                     </ui-select>
